import "ads/bsyeti/big_rt/lib/serializable_profile/proto/options.proto";

package NBigRT.NTests;

message TTestProfileProto {
    option (NBigRT.YtTableName) = "Lazy";

    message TStructuredColumn1 {
        optional string StringValue = 1;
        optional uint64 IntValue = 2;
    };

    message TStructuredColumn2 {
        optional string StringValue = 1;
        optional uint64 IntValue = 2;
        repeated string RepeatedStringValue = 3;
    };

    optional uint64 ProfileID = 1 [(NBigRT.FieldName) = "ProfileID", (NBigRT.FieldType) = PFT_KEY];
    optional TStructuredColumn1 StructuredColumn1 = 2 [(NBigRT.FieldName) = "StructuredColumn1", (NBigRT.FieldType) = PFT_PACKABLE];
    optional uint64 SimpleColumn = 3 [(NBigRT.FieldName) = "SimpleColumn", (NBigRT.FieldType) = PFT_SIMPLE];
    optional TStructuredColumn2 StructuredColumn2 = 4 [(NBigRT.FieldName) = "StructuredColumn2", (NBigRT.FieldType) = PFT_PACKABLE];

    // service field, used only for updates queue
    optional NBigRT.TServiceFields ServiceFields = 5;
}
